# FYP-DOCMATE-Replit

./: .gitignore  .replit  API_DOCS.md  DEPLOY.md  pyproject.toml  replit.md  requirements.txt  test_uml.py
api/: index.py  requirements.txt
attached_assets/: auto_doc_1768927967241.py  docstring_generator_1768927922155.py  generate_docs_1768927967243.py  parser_1768927922156.py  project_docs_1768927922156.py
code_doc_ai/: __init__.py
code_doc_ai/agents/: __init__.py  base.py  doc_agents.py  engine.py
code_doc_ai/api/: app.py  auth.py  github.py  routes.py  schemas.py  supabase_service.py  usage.py
code_doc_ai/app/: __init__.py  auto_doc.py  docstring_generator.py  generate_docs.py  parser.py  project_docs.py  relationship_mapper.py  uml_generator.py
code_doc_ai/core/: __init__.py  models.py  parser.py  relationships.py
code_doc_ai/generators/: __init__.py  pdf.py  uml.py
code_doc_ai/llm/: __init__.py  base.py  codet5_provider.py  factory.py  gemini_provider.py  groq_provider.py
code_doc_ai/utils/: __init__.py  config.py
migrations/: 001_create_tables.sql  002_add_filepath.sql
src/: main.py
test_sample/: __init__.py  main.py  models.py  services.py
training/: README_TRAINING.md  codet5_training.py
